# faasrail

./: .gitignore  README.md  ow-bench-collect.py  plot_wow_results.py
faasrail-benchmarks/: Cargo.toml  Makefile  bench-float.cwasm  ow-profile-rust.sh  ow-profile.sh  profile-workloads.sh  register_ow_rust_funcs.sh  workloads-rust-code.json
faasrail-benchmarks/crates/: setup_vm.sh  start_benchmark.sh
faasrail-benchmarks/crates/bench-aes/: Cargo.toml
faasrail-benchmarks/crates/bench-aes/src/: lib.rs  main.rs
faasrail-benchmarks/crates/bench-chameleon/: Cargo.toml
faasrail-benchmarks/crates/bench-chameleon/src/: lib.rs  main.rs
faasrail-benchmarks/crates/bench-common/: Cargo.toml
faasrail-benchmarks/crates/bench-common/src/: lib.rs
faasrail-benchmarks/crates/bench-disk-rand/: Cargo.toml
faasrail-benchmarks/crates/bench-disk-rand/src/: lib.rs  main.rs
faasrail-benchmarks/crates/bench-disk-seq/: Cargo.toml
faasrail-benchmarks/crates/bench-disk-seq/src/: lib.rs  main.rs
faasrail-benchmarks/crates/bench-dp/: Cargo.toml
faasrail-benchmarks/crates/bench-dp/src/: lib.rs  main.rs
faasrail-benchmarks/crates/bench-float/: Cargo.toml
faasrail-benchmarks/crates/bench-float/src/: lib.rs  main.rs
faasrail-benchmarks/crates/bench-gzip/: Cargo.toml
faasrail-benchmarks/crates/bench-gzip/src/: lib.rs  main.rs
faasrail-benchmarks/crates/bench-json/: Cargo.toml
faasrail-benchmarks/crates/bench-json/src/: lib.rs  main.rs
faasrail-loadgen/crates/faasrail-loadgen/src/source/: worker.rs
faasrail-shrinkray/: .gitignore  README.md
faasrail-shrinkray/artifacts/: ow-workloads.json  wasm-functions.json  wasm-trace-spec.csv  wasm-workloads.js
faasrail-shrinkray/shrinkray/: benchmarks.py  generator.py  main.py  specification.py
inputs/: diverse_10RPS_bench.csv  rust-code-16rps.csv  rust_code_trace.csv  spec-mr_16rps_30min.csv  spec-mr_20rps_30min.csv  spec-mr_30rps_30min.csv
ow-loadgen/: .gitignore  Cargo.toml  README.md
ow-loadgen/src/: main.rs  openwhisk.rs
results/: 10rps_native.ndjson  16rps_benchmark.ndjson  16rps_rust_code.ndjson  16rps_rust_compile.ndjson  30rps_rust_compile.ndjson  longer_10RPS_rust_native.ndjson  plot_results.py  wow_distributed_results.json  wow_distributed_wasmtime.ndjson  wow_results.json  wow_wasmtime.ndjson
wasm-loadgen/: Cargo.toml
wasm-loadgen/src/: main.rs
wasm-throughput/: Cargo.toml
wasm-throughput/src/: main.rs
