[package]
name = "ow-loadgen"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "OpenWhisk load-generator backend for FaaSRail"

[dependencies]
anyhow = "1"
argh = "0.1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { version = "0.1", features = ["signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

faasrail-loadgen = { path = "../faasrail-loadgen/crates/faasrail-loadgen" }
