[package]
name = "bench-float"
version = "0.1.0"
edition = "2015"

[lib]
name = "bench_float"
path = "src/lib.rs"

[dependencies]
# Same crates are pre-included for single-file rust:1.34 actions on OpenWhisk; listed here for local/wasm `cargo build` only.
serde = "=1.0.91"
serde_json = "=1.0.39"
serde_derive = "=1.0.91"
