[package]
name = "bench-gzip"
version = "0.1.0"
edition = "2018"

[dependencies]
bench-common = { path = "../bench-common" }
serde = { version = ">=1.0, <1.0.100", features = ["derive"] }
serde_json = ">=1.0, <1.0.56"
flate2 = { version = ">=1.0.13, <1.0.22", default-features = false, features = ["miniz_oxide"] }
getrandom = "0.1"
