[package]
name = "bench-gzip"
version = "0.1.0"
edition = "2015"

[lib]
name = "bench_gzip"
path = "src/lib.rs"

[dependencies]
serde = { version = ">=1.0, <1.0.100", features = ["derive"] }
serde_json = ">=1.0, <1.0.56"
serde_derive = ">=1.0, <1.0.100"
flate2 = { version = ">=1.0.13, <1.0.22", default-features = false, features = ["miniz_oxide"] }
getrandom = "0.1"
